interaction parent-enfant

--- a/src/app/first/first.component.html
+++ b/src/app/first/first.component.html
@@ -15,3 +15,7 @@
   type="text"
   class="form-control"
 />
+
+<hr />
+<p>Appel à Second depuis le first</p>
+<app-second [cl]="textColor"></app-second>
