1ere etape du projet

--- a/src/app/second/second.component.html
+++ b/src/app/second/second.component.html
@@ -1,1 +1,5 @@
 <div [style.color]="cl">Second Component</div>
+
+<button (click)="clickHandler()" class="btn btn-primary">
+  Send Message To Parent
+</button>
