--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,8 +1,11 @@
-<h2>Je suis le AppComponent</h2>
+<!-- <h2>Je suis le AppComponent</h2>
 <hr />
 
 <app-first></app-first>
 <hr />
 <p>Appel à Second depuis le AppComponent</p>
 
-<app-second [cl]="'blue'"></app-second>
+<app-second (msgToParent)="loggerMessage($event)" [cl]="'blue'"></app-second> -->
+<div class="container">
+  <app-cv></app-cv>
+</div>
