--- a/src/app/first/first.component.html
+++ b/src/app/first/first.component.html
@@ -18,4 +18,7 @@
 
 <hr />
 <p>Appel à Second depuis le first</p>
-<app-second [cl]="textColor"></app-second>
+<app-second
+  (msgToParent)="RecupererMessage($event)"
+  [cl]="textColor"
+></app-second>
