--- a/src/app/cv/cv.component.html
+++ b/src/app/cv/cv.component.html
@@ -6,6 +6,10 @@
     ></app-liste>
   </div>
   <div class="col-7">
+    @if (selectedCandidat) {
     <app-details [selCandidate]="selectedCandidat"></app-details>
+    } @else {
+    <i>Veuillez sélectionner un candidat</i>
+    }
   </div>
 </div>
