--- a/src/app/accounts/home-accounts/home-accounts.component.html
+++ b/src/app/accounts/home-accounts/home-accounts.component.html
@@ -1,1 +1,5 @@
-<p>home-accounts works!</p>
+<app-add-account (eventToHomeAccount)="addAccount($event)"></app-add-account>
+
+@for (acc of tabAccounts; track $index) {
+<app-item-account [oneAccount]="acc"></app-item-account>
+}
