--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -8,5 +8,6 @@
 <app-second (msgToParent)="loggerMessage($event)" [cl]="'blue'"></app-second> -->
 <div class="container">
   <!-- <app-cv></app-cv> -->
-  <app-home-accounts></app-home-accounts>
+  <!-- <app-home-accounts></app-home-accounts> -->
+  <app-direct></app-direct>
 </div>
