--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -9,5 +9,6 @@
 <div class="container">
   <!-- <app-cv></app-cv> -->
   <!-- <app-home-accounts></app-home-accounts> -->
-  <app-direct></app-direct>
+  <!-- <app-direct></app-direct> -->
+  <app-manage-servers></app-manage-servers>
 </div>
