--- a/src/app/manage-servers/manage-servers.component.html
+++ b/src/app/manage-servers/manage-servers.component.html
@@ -1,5 +1,8 @@
+<input [(ngModel)]="selectedStatus" type="text" class="form-control" />
+
+<br />
 <ol class="list-group">
-  @for (server of tabServers; track $index) {
+  @for (server of tabServers | filter:selectedStatus; track $index) {
   <li class="list-group-item" [ngClass]="affecterClass(server.status)">
     {{ server.name | short : 30 }} | {{ server.type | titlecase }} |
     {{ server.date_d | date : "fullDate" | uppercase }}
@@ -9,3 +12,7 @@
   </li>
   }
 </ol>
+
+<button class="btn btn-outline-primary" (click)="addHandler()">
+  Add Server
+</button>
