--- a/src/app/liste/liste.component.html
+++ b/src/app/liste/liste.component.html
@@ -16,3 +16,7 @@
     [oneCandidate]="listeCandidats[2]"
   ></app-item> -->
 </ol>
+
+<button (click)="showCandidats()" class="btn btn-outline-warning">
+  Affiche Candidats Depuis Liste
+</button>
