--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -8,6 +8,7 @@
 <app-second (msgToParent)="loggerMessage($event)" [cl]="'blue'"></app-second> -->
 <div class="container">
   <app-cv></app-cv>
+  <app-recruter></app-recruter>
   <!-- <app-home-accounts></app-home-accounts> -->
   <!-- <app-direct></app-direct> -->
   <!-- <app-manage-servers></app-manage-servers> -->
