--- a/src/app/cv/cv.component.html
+++ b/src/app/cv/cv.component.html
@@ -11,9 +11,9 @@
   </div>
 </div>
 
-<button (click)="addHandler()" class="btn btn-outline-primary">
+<!-- <button (click)="addHandler()" class="btn btn-outline-primary">
   Add Candidat
 </button>
 <button (click)="showCandidats()" class="btn btn-outline-danger">
   Affiche Candidats Depuis CV
-</button>
+</button> -->
