--- a/src/app/cv/cv.component.html
+++ b/src/app/cv/cv.component.html
@@ -10,6 +10,7 @@
     }
   </div>
 </div>
+<app-recruter></app-recruter>
 
 <!-- <button (click)="addHandler()" class="btn btn-outline-primary">
   Add Candidat
