--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -7,8 +7,9 @@
 
 <app-second (msgToParent)="loggerMessage($event)" [cl]="'blue'"></app-second> -->
 <div class="container">
-  <app-cv></app-cv>
+  <!-- <app-cv></app-cv> -->
   <!-- <app-home-accounts></app-home-accounts> -->
   <!-- <app-direct></app-direct> -->
   <!-- <app-manage-servers></app-manage-servers> -->
+  <app-exemple-signals></app-exemple-signals>
 </div>
