--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -11,5 +11,6 @@
   <!-- <app-home-accounts></app-home-accounts> -->
   <!-- <app-direct></app-direct> -->
   <!-- <app-manage-servers></app-manage-servers> -->
-  <app-exemple-signals></app-exemple-signals>
+  <!-- <app-exemple-signals></app-exemple-signals> -->
+   <app-home-products></app-home-products>
 </div>
