snapshot vs observable

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -12,5 +12,6 @@
   <!-- <app-direct></app-direct> -->
   <!-- <app-manage-servers></app-manage-servers> -->
   <!-- <app-exemple-signals></app-exemple-signals> -->
-   <app-home-products></app-home-products>
+   <!-- <app-home-products></app-home-products> -->
+    <router-outlet></router-outlet>
 </div>
