--- a/src/app/details/details.component.html
+++ b/src/app/details/details.component.html
@@ -56,6 +56,9 @@
           <button (click)="recruterHandler()" class="btn btn-success">
             Recruter
           </button>
+          <a [routerLink]="[selCandidate.id]" class="btn btn-outline-info">
+            Details
+          </a>
         </div>
       </div>
     </div>
