--- a/src/app/infos/infos.component.html
+++ b/src/app/infos/infos.component.html
@@ -1,3 +1,54 @@
-<h1>ID = {{ myId }} </h1>
+<div class="d-flex justify-content-center">
+  <div class="col-lg-8 push-lg-4">
+    <div class="tab-content p-b-3">
+      <div class="tab-pane active" id="profile">
+        <div class="d-flex justify-content-center">
+          <img
+            width="150px"
+            height="150px"
+            class="rounded-circle align-content-center"
+            [src]="selectedCandidate.avatar | noAvatar"
+            alt=""
+          />
+        </div>
+        <div class="row">
+          <div class="col-md-12">
+            <h4 class="m-t-2">
+              <span class="fa fa-clock-o ion-clock pull-xs-right"></span>
+              Informations
+            </h4>
+            <table class="table table-hover table-striped">
+              <tbody>
+                <tr>
+                  <td>
+                    <strong>Prénom</strong> {{ selectedCandidate.prenom }}
+                  </td>
+                </tr>
+                <tr>
+                  <td><strong>Nom</strong> {{ selectedCandidate.nom }}</td>
+                </tr>
+                <tr>
+                  <td><strong>Age</strong> {{ selectedCandidate.age }} ans</td>
+                </tr>
 
-<a routerLink="/cv/44">Go to Id 44</a>
+                <tr>
+                  <td>
+                    <strong>Profession</strong>
+                    {{ selectedCandidate.profession }}
+                  </td>
+                </tr>
+                <tr>
+                  <td><strong>Image</strong> {{ selectedCandidate.avatar }}</td>
+                </tr>
+              </tbody>
+            </table>
+            <div class="d-flex justify-content-center">
+              <button class="btn btn-danger">Delete</button>
+              <button class="btn btn-primary">Update</button>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
