--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -12,6 +12,7 @@
   <!-- <app-direct></app-direct> -->
   <!-- <app-manage-servers></app-manage-servers> -->
   <!-- <app-exemple-signals></app-exemple-signals> -->
-   <!-- <app-home-products></app-home-products> -->
-    <router-outlet></router-outlet>
+  <!-- <app-home-products></app-home-products> -->
+  <app-navbar></app-navbar>
+  <router-outlet></router-outlet>
 </div>
