--- a/src/app/details/details.component.html
+++ b/src/app/details/details.component.html
@@ -56,7 +56,7 @@
           <button (click)="recruterHandler()" class="btn btn-success">
             Recruter
           </button>
-          <a [routerLink]="[selCandidate.id]" class="btn btn-outline-info">
+          <a [routerLink]="[selCandidate._id]" class="btn btn-outline-info">
             Details
           </a>
         </div>
