--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -18,9 +18,12 @@
       >CV</a
     >
   </li>
+  @if (authSer.estConnecte()) {
   <li class="nav-item">
     <a class="nav-link" routerLink="cv/add" routerLinkActive="active">Add CV</a>
   </li>
+
+  }
   <li class="nav-item">
     <a class="nav-link" routerLink="accounts" routerLinkActive="active"
       >Accounts</a
@@ -31,7 +34,14 @@
       >Products</a
     >
   </li>
+  @if (!authSer.estConnecte()) {
   <li class="nav-item">
     <a class="nav-link" routerLink="login" routerLinkActive="active">Login</a>
   </li>
+} @else {
+    
+    <li class="nav-item">
+      <a class="nav-link" (click)="authSer.seDeconnecter()">Logout</a>
+    </li>
+  }
 </ul>
